[package]
name = "snlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "4.3.0"
snlc_lexer = { path = "snlc_lexer" }
snlc_ast = { path = "snlc_ast" }
snlc_parse = { path = "snlc_parse" }

[workspace]
members = [
    "snlc_lexer",
    "snlc_parse",
    "snlc_ast"
]
