[package]
name = "snlc_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.59"
quote = "1.0.28"
snlc_ast = { path = "../snlc_ast" }
syn = { version = "2.0.18", features = ["full"] }
synstructure = "0.13.0"

[lib]
proc-macro = true
